[tool.poetry]
name = "algorithm_training"
version = "0.1.0"
description = ""
authors = ["Takahashi Kanji <ka.takahashi@sansan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
